--- a/templates/dashboards/sales/main.html
+++ b/templates/dashboards/sales/main.html
@@ -164,7 +164,9 @@
                         <a class="nav-link" href="/sales/my-orders"><i class="bi bi-clipboard-check me-2"></i>My Orders</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="bi bi-cart add"></i>Add</a>
+                        <a class="nav-link " href="/sales/cancel-orders">
+                            <i class="bi bi-x-circle me-2"></i>Canceled
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi bi-calendar-event me-2"></i>Calendar</a>
